--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 mysqlclient==2.0.1
 pycparser==2.20
+PyJWT==1.7.1
+PyMySQL==0.9.3
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 python-editor==1.0.4
